# AdvancedCpp

./: .gitignore  AdvancedCpp.sln  CMakeLists.txt
Factory/: Contractor.cpp  Contractor.h  Factory.h  Factory.sln  Factory.vcxproj  HourlyEmployee.cpp  HourlyEmployee.h  HumanResource.h  Payroll.cpp  Readme.md
Labs/: Readme.md
Labs/Composite/: Readme.md
Labs/Factory/: Contractor.cpp  Employee.cpp  Employee.h  Factory.h  HourlyEmployee.cpp  HourlyEmployee.h  HumanResource.h  Organization.h  Payroll.cpp  Readme.md
Labs/Features/: Readme.md
Labs/Introduction/: Readme.md
Labs/Lambda/: Readme.md
Labs/OperatorOverloading/: Employee.cpp  Factory.h  HourlyEmployee.h  OperatorOverloading.vcxproj  Payroll.cpp  Readme.md
Labs/PayrollPart1/: Employee.h  Organization.h  Payroll.cpp  PayrollPart1.vcxproj  PayrollPart1.vcxproj.filters  PayrollPart1_solution.vcxproj  Readme.md
Labs/PayrollPart2/: Readme.md
Labs/PayrollPart3/: Readme.md
Labs/PayrollPart4/: Readme.md
Labs/PayrollPart5/: Readme.md
Labs/PayrollPart6/: Readme.md
Labs/SmartPtrs/: Readme.md
Labs/Tasks/: Readme.md
Labs/TemplateMethod/: Readme.md
Labs/Threads/: Main.cpp  Readme.md
Performance/: Performance.cpp  Performance.vcxproj
SOLID/: SOLID.cpp  SOLID.vcxproj  SOLID.vcxproj.filters
Solutions/Composite/: Contractor.cpp  Employee.h  Factory.h  HourlyEmployee.h  HumanResource.h  Organization.h  Vendor.h
Solutions/CompositePattern/: CompositePattern.vcxproj  Payroll.cpp
Solutions/Factory/: Contractor.cpp  Contractor.h  Employee.cpp  Employee.h  FactorySolution.vcxproj  HourlyEmployee.h  Organization.h  Payroll.cpp
Solutions/Features/: Features.cpp
Solutions/Lambda/: Contractor.h  HourlyEmployee.cpp  LambdaSolution.vcxproj  ObjectFactory.cpp  Organization.h  Payroll.cpp
Solutions/PayrollPart1/: CMakeLists.txt  Employee.h  Organization.h  Payroll.cpp  PayrollPart1_solution.vcxproj
Solutions/PayrollPart2/: Employee.h  (+4 more)
examples/modules/: CMakeLists.txt  MyModule.ixx  modules.cpp  modules.vcxproj  modules.vcxproj.filters
(+59 files in other folders)
